refactor: update client connection info to use raw SQL pagination
- Replace Spring Data JPA Page with raw SQL queries via JdbcTemplate
- Add currentPage to model for active page highlighting in template
- Simplify pagination UI to iterate pages array without First/Last links
- Update API reference spec with new pagination model attributes
- Add client-conn-pagination spec documenting raw SQL pagination behavior